--- a/src/App.css
+++ b/src/App.css
@@ -8,33 +8,51 @@
 .trans-btn {
   color: #3789ff !important;
   border: 2px solid #3789ff !important;
+  text-transform: uppercase;
 }
 .blue-btn {
   background-color: #3789ff;
+  text-transform: uppercase;
 }
 .sub-text,
 .sub-text-white {
-  font-weight: 500;
-  font-size: 13px;
   line-height: 30px;
   color: #94a2b3;
+  font-weight: 500;
+  font-size: 18px;
 }
 .gold-btn {
   background-color: #ffba49;
+  width: 256px;
+  height: 64px;
+  border-radius: 5px;
+  text-transform: capitalize;
 }
 .sub-text-white {
   color: white;
-  font-size: 12px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 30px;
 }
- h3 {
-    color: #272d4e;
-  }
-  h2{
-    color: #272d4e;
-  }
+h3 {
+  color: #272d4e;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 70px;
+}
+h2 {
+  color: #272d4e;
+  font-weight: 600;
+  font-size: 55px;
+  line-height: 70px;
+}
 @media screen and (max-width: 800px) {
   .bottom-header {
     flex-direction: column;
     text-align: center;
+  }
+  h2 {
+    font-size: 30px;
+    line-height: 50px;
   }
 }
